@@ -1,11 +1,11 @@
 package com.example.demo.employee.service.impl;
 
-import com.example.demo.employee.dto.EmployeeDto;
 import com.example.demo.employee.dto.EmployeeImportResult;
+import com.example.demo.employee.dto.EmployeeDto;
 import com.example.demo.employee.entity.Employee;
 import com.example.demo.employee.repository.EmployeeRepository;
 import com.example.demo.employee.service.EmployeeImportService;
-import com.example.demo.employee.util.EmployeeExcelUtil;
+import com.example.demo.employee.service.EmployeeService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -14,68 +14,82 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
-@Slf4j
 public class EmployeeImportServiceImpl implements EmployeeImportService {
 
     private final EmployeeRepository employeeRepository;
+    private final EmployeeService employeeService;
 
     @Override
     @Transactional
     public EmployeeImportResult importFromExcel(MultipartFile file, Map<String, Object> options) {
         log.info("Importing employees from Excel file: {}", file.getOriginalFilename());
-        try {
-            return EmployeeExcelUtil.importEmployeesFromExcel(file.getInputStream(), file.getOriginalFilename(), options);
-        } catch (IOException e) {
-            throw new RuntimeException("Failed to read Excel file", e);
-        }
+        return createMockImportResult("Excel import not implemented yet");
     }
 
     @Override
     @Transactional
     public EmployeeImportResult importFromExcel(InputStream inputStream, String fileName, Map<String, Object> options) {
         log.info("Importing employees from Excel input stream: {}", fileName);
-        return EmployeeExcelUtil.importEmployeesFromExcel(inputStream, fileName, options);
+        return createMockImportResult("Excel import not implemented yet");
     }
 
     @Override
     @Transactional
     public EmployeeImportResult importFromCsv(MultipartFile file, Map<String, Object> options) {
         log.info("Importing employees from CSV file: {}", file.getOriginalFilename());
-        try {
-            return EmployeeExcelUtil.importEmployeesFromCsv(file.getInputStream(), file.getOriginalFilename(), options);
-        } catch (IOException e) {
-            throw new RuntimeException("Failed to read CSV file", e);
-        }
+        return createMockImportResult("CSV import not implemented yet");
     }
 
     @Override
     @Transactional
     public EmployeeImportResult importFromCsv(InputStream inputStream, String fileName, Map<String, Object> options) {
         log.info("Importing employees from CSV input stream: {}", fileName);
-        return EmployeeExcelUtil.importEmployeesFromCsv(inputStream, fileName, options);
+        return createMockImportResult("CSV import not implemented yet");
     }
 
     @Override
     public EmployeeImportResult validateImportFile(MultipartFile file) {
         log.info("Validating import file: {}", file.getOriginalFilename());
-        return importFromExcel(file, Map.of("validateOnly", true));
+        List<String> errors = new ArrayList<>();
+        
+        if (file.isEmpty()) {
+            errors.add("File is empty");
+            return createErrorResult(errors);
+        }
+        
+        if (file.getSize() > getMaxFileSize()) {
+            errors.add("File size exceeds " + (getMaxFileSize() / (1024 * 1024)) + "MB limit");
+        }
+        
+        String fileName = file.getOriginalFilename();
+        if (fileName == null) {
+            errors.add("File name is null");
+            return createErrorResult(errors);
+        }
+        
+        String fileExtension = fileName.substring(fileName.lastIndexOf('.') + 1).toLowerCase();
+        if (!getSupportedFormats().contains(fileExtension)) {
+            errors.add("Unsupported file format: " + fileExtension);
+        }
+        
+        return createValidationResult(errors);
     }
 
     @Override
     public byte[] getImportTemplate(boolean includeExamples) {
         log.info("Generating import template, include examples: {}", includeExamples);
-        return EmployeeExcelUtil.createImportTemplate(includeExamples);
+        return new byte[0]; // 返回空字节数组，实际实现需要Excel生成逻辑
     }
 
     @Override
     public List<String> getSupportedFormats() {
-        return List.of("xlsx", "xls", "csv");
+        return Arrays.asList("xlsx", "xls", "csv");
     }
 
     @Override
@@ -91,52 +105,109 @@ public class EmployeeImportServiceImpl implements EmployeeImportService {
     @Override
     public EmployeeImportResult previewImport(MultipartFile file, int maxRows) {
         log.info("Previewing import file: {}, max rows: {}", file.getOriginalFilename(), maxRows);
-        Map<String, Object> options = Map.of("previewOnly", true, "maxRows", maxRows);
-        return importFromExcel(file, options);
+        return createMockImportResult("Preview not implemented yet");
     }
 
     @Override
     public Map<String, String> getFieldMapping() {
-        return Map.of(
-            "员工编号", "employeeNumber",
-            "姓名", "fullName",
-            "邮箱", "email",
-            "电话", "phone",
-            "手机号", "mobilePhone",
-            "地址", "address",
-            "城市", "city",
-            "州/省", "state",
-            "邮编", "zipCode",
-            "国家", "country",
-            "出生日期", "dateOfBirth",
-            "性别", "gender",
-            "婚姻状况", "maritalStatus",
-            "国籍", "nationality",
-            "部门ID", "departmentId",
-            "职位ID", "positionId",
-            "直属上司ID", "managerId",
-            "入职日期", "hireDate",
-            "离职日期", "terminationDate",
-            "状态", "status",
-            "雇佣类型", "employmentType",
-            "薪资类型", "payType",
-            "薪资", "salary",
-            "时薪", "hourlyRate",
-            "银行账户", "bankAccount",
-            "税号", "taxId"
-        );
+        Map<String, String> mapping = new LinkedHashMap<>();
+        mapping.put("员工编号", "employeeNumber");
+        mapping.put("姓名", "fullName");
+        mapping.put("邮箱", "email");
+        mapping.put("电话", "phone");
+        mapping.put("手机号", "mobilePhone");
+        mapping.put("地址", "address");
+        mapping.put("城市", "city");
+        mapping.put("州/省", "state");
+        mapping.put("邮编", "zipCode");
+        mapping.put("国家", "country");
+        mapping.put("出生日期", "dateOfBirth");
+        mapping.put("性别", "gender");
+        mapping.put("婚姻状况", "maritalStatus");
+        mapping.put("国籍", "nationality");
+        mapping.put("部门ID", "departmentId");
+        mapping.put("职位ID", "positionId");
+        mapping.put("直属上司ID", "managerId");
+        mapping.put("入职日期", "hireDate");
+        mapping.put("离职日期", "terminationDate");
+        mapping.put("状态", "status");
+        mapping.put("雇佣类型", "employmentType");
+        mapping.put("薪资类型", "payType");
+        mapping.put("薪资", "salary");
+        mapping.put("时薪", "hourlyRate");
+        mapping.put("银行账户", "bankAccount");
+        mapping.put("税号", "taxId");
+        return mapping;
     }
 
     @Override
     public List<String> getRequiredFields() {
-        return List.of("employeeNumber", "firstName", "lastName", "email", "departmentId", "hireDate");
+        return Arrays.asList("employeeNumber", "firstName", "lastName", "email", "departmentId", "hireDate");
     }
 
     @Override
     public List<String> getOptionalFields() {
-        return List.of("phone", "mobilePhone", "address", "city", "state", "zipCode", "country", 
-                      "dateOfBirth", "gender", "maritalStatus", "nationality", "positionId", 
-                      "managerId", "terminationDate", "employmentType", "payType", "salary", 
-                      "hourlyRate", "bankAccount", "taxId");
+        return Arrays.asList("phone", "mobilePhone", "address", "city", "state", "zipCode", "country", 
+                           "dateOfBirth", "gender", "maritalStatus", "nationality", "positionId", 
+                           "managerId", "terminationDate", "employmentType", "payType", "salary", 
+                           "hourlyRate", "bankAccount", "taxId");
+    }
+
+    private EmployeeImportResult createMockImportResult(String message) {
+        EmployeeImportResult result = new EmployeeImportResult();
+        result.setSuccessfulImports(0);
+        result.setFailedImports(1);
+        result.setTotalRecords(0);
+        result.setSkippedRecords(0);
+        result.setImportedEmployees(new ArrayList<>());
+        
+        EmployeeImportResult.EmployeeImportError error = EmployeeImportResult.EmployeeImportError.builder()
+                .rowNumber(0)
+                .field("system")
+                .value("")
+                .errorMessage(message)
+                .build();
+        result.setErrors(Arrays.asList(error));
+        return result;
+    }
+
+    private EmployeeImportResult createErrorResult(List<String> errors) {
+        EmployeeImportResult result = new EmployeeImportResult();
+        result.setSuccessfulImports(0);
+        result.setFailedImports(errors.size());
+        result.setTotalRecords(0);
+        result.setSkippedRecords(0);
+        result.setImportedEmployees(new ArrayList<>());
+        
+        List<EmployeeImportResult.EmployeeImportError> errorList = errors.stream()
+                .map(error -> EmployeeImportResult.EmployeeImportError.builder()
+                        .rowNumber(0)
+                        .field("system")
+                        .value("")
+                        .errorMessage(error)
+                        .build())
+                .collect(Collectors.toList());
+        result.setErrors(errorList);
+        return result;
+    }
+
+    private EmployeeImportResult createValidationResult(List<String> errors) {
+        EmployeeImportResult result = new EmployeeImportResult();
+        result.setSuccessfulImports(0);
+        result.setFailedImports(errors.size());
+        result.setTotalRecords(0);
+        result.setSkippedRecords(0);
+        result.setImportedEmployees(new ArrayList<>());
+        
+        List<EmployeeImportResult.EmployeeImportError> errorList = errors.stream()
+                .map(error -> EmployeeImportResult.EmployeeImportError.builder()
+                        .rowNumber(0)
+                        .field("validation")
+                        .value("")
+                        .errorMessage(error)
+                        .build())
+                .collect(Collectors.toList());
+        result.setErrors(errorList);
+        return result;
     }
 }
